--- a/index.html
+++ b/index.html
@@ -1,1 +1,62 @@
-
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="UTF8" >
+        <meta lang="en">
+        <meta name="viewport" content="width=device-width", initial-scale="1.0">
+        <meta name="description" content="Find the best jacket for your outdoor activities">
+        <link href="css/style.css" rel="stylesheet">
+        <script src="https://kit.fontawesome.com/f55b09a11a.js" crossorigin="anonymous"></script>
+        <title>RainyDays ⎮ Home</title>
+    </head>
+    <body>
+        <header>
+            <label for="hamburger-menu"><i class="fa-solid fa-bars"></i> </label>
+            <input type="checkbox" id="hamburger-menu"/>
+            <nav >
+                <ul>
+                    <li> <a href="index.html" class="active"> HOME </a> </li>
+                    <li> <a href="products/products.html"> PRODUCTS </a></li>
+                    <li> <a href="about.html" > ABOUT US </a></li>
+                    <li> <a href="contact.html"> CONTACT </a></li>
+                    <li> <a href="products/checkout.html"> SHOPPING CART </a></li>
+                </ul>
+            </nav>
+            <div class="header_image"></div>
+        </header>
+        <main>
+           <h1>Experience freedom wearing our design</h1>
+           <h2>Seek discomfort while wearing comfort</h2>
+        </main>
+        <footer>
+            <section class="footer_mobile">
+                <img src="images/RainyDays_Logo 5.png" class="logo_footer">
+                <a href="https://www.instagram.com"><img src="images/instagram/instagram2.png"></a>
+                <a href="https://www.facebook.com"><img src="images/facebook/facebook2.png"></a>
+                <a href="https://www.instagram.com"><img src="images/snapchat/snapchat2.png"></a>
+            </section>
+            <section class="footer_desktop">
+            <section >
+                <p>Contact Us</p>
+                <p><i class="fa-solid fa-envelope"></i> cstmservice@rainydays.com</p>
+                <p><i class="fa-solid fa-phone"></i> +47 123 45 455</p>
+                <p> <i class="fa-solid fa-location-dot"></i> Fredrikstenveien 14, 5386 Oslo
+                </p>
+            </section>
+            <section>
+                <p>More info</p>
+                <p><a href="/extra pages/payment.html">Payment</a></p>
+                <p><a href="/extra pages/delivery.html">Delivery</a></p>
+                <p><a href="/extra pages/return.html">Return policy</a></p>
+            </section>
+            <div>
+                <p>Find us on social media</p>
+                <p class="social_media"> <a href="https://www.instagram.com"> <img src="/images/instagram/Instagram.png" alt="instagram logo" class="sm_logo"></a><a href="https://www.facebook.com" ><img src="/images/facebook/facebook.png" alt="facebook logo" class="sm_logo"></a><a href="https://www.snapchat.com"><img src="/images/snapchat/Snapchat.png" alt="snapchat Logo" class="sm_logo"></p></a>
+                <p>Sign up for newsletter</p>
+                <input type="text" name="email" id="newsletter__email" />
+                <p><a href="/extra pages/submited.html"><button id="submit">Submit</button></a></p>
+            </div>
+            </section>
+        </footer>
+    </body>
+</html>
