--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
                     <li> <a href="products/checkout.html"> SHOPPING CART </a></li>
                 </ul>
             </nav>
-            <div class="header_image"></div>
+            <div class="header_image">
+                <figure class="logo_home"><img src="/images/logo/RainyDays_Logo.black.png"></figure>
+            </div>
         </header>
         <main>
            <h1>Experience freedom wearing our design</h1>
@@ -30,10 +32,10 @@
         </main>
         <footer>
             <section class="footer_mobile">
-                <img src="images/RainyDays_Logo 5.png" class="logo_footer">
-                <a href="https://www.instagram.com"><img src="images/instagram/instagram2.png"></a>
-                <a href="https://www.facebook.com"><img src="images/facebook/facebook2.png"></a>
-                <a href="https://www.instagram.com"><img src="images/snapchat/snapchat2.png"></a>
+                <img src="/images/logo/RainyDays_Logo.original.png" class="logo_footer">
+                <a href="https://www.instagram.com"><img src="/images/instagram/instagram2.png"></a>
+                <a href="https://www.facebook.com"><img src="/images/facebook/facebook2.png"></a>
+                <a href="https://www.instagram.com"><img src="/images/snapchat/snapchat2.png"></a>
             </section>
             <section class="footer_desktop">
             <section >
